; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_4732.c_put_name.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_4732.c_put_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_NETBIOSNAME_LEN = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @put_name(i8* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = call i64 @strlen(i8* %10)
  store i64 %11, i64* %9, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = load i64, i64* %9, align 8
  %15 = load i64, i64* @MAX_NETBIOSNAME_LEN, align 8
  %16 = icmp ult i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %4
  %18 = load i64, i64* %9, align 8
  br label %22

19:                                               ; preds = %4
  %20 = load i64, i64* @MAX_NETBIOSNAME_LEN, align 8
  %21 = sub i64 %20, 1
  br label %22

22:                                               ; preds = %19, %17
  %23 = phi i64 [ %18, %17 ], [ %21, %19 ]
  %24 = call i32 @memcpy(i8* %12, i8* %13, i64 %23)
  %25 = load i64, i64* %9, align 8
  %26 = load i64, i64* @MAX_NETBIOSNAME_LEN, align 8
  %27 = sub i64 %26, 1
  %28 = icmp ult i64 %25, %27
  br i1 %28, label %29, label %39

29:                                               ; preds = %22
  %30 = load i8*, i8** %5, align 8
  %31 = load i64, i64* %9, align 8
  %32 = getelementptr inbounds i8, i8* %30, i64 %31
  %33 = load i32, i32* %7, align 4
  %34 = load i64, i64* @MAX_NETBIOSNAME_LEN, align 8
  %35 = sub i64 %34, 1
  %36 = load i64, i64* %9, align 8
  %37 = sub i64 %35, %36
  %38 = call i32 @memset(i8* %32, i32 %33, i64 %37)
  br label %39

39:                                               ; preds = %29, %22
  %40 = load i32, i32* %8, align 4
  %41 = trunc i32 %40 to i8
  %42 = load i8*, i8** %5, align 8
  %43 = load i64, i64* @MAX_NETBIOSNAME_LEN, align 8
  %44 = sub i64 %43, 1
  %45 = getelementptr inbounds i8, i8* %42, i64 %44
  store i8 %41, i8* %45, align 1
  ret void
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1

declare dso_local i32 @memset(i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
